# EmployeesManagement/EmployeesManagement/Controllers/PersonController.cs
@@ -38,16 +38,6 @@ namespace EmployeesManagement.Controllers
             return NoContent();
         }
 
-        // AddWorkingInfo
-        [HttpPut("AddWorkingInfo/{id:int}")]
-        [ProducesResponseType(StatusCodes.Status204NoContent)]
-        [ProducesDefaultResponseType]
-        public async Task<ActionResult> AddWorkingInfo(int workingTimeId, Person person)
-        {
-            await _personService.AddWorkingInfo(workingTimeId, person);
-            return NoContent();
-        }
-
         // AddTicket
         [HttpPut("AddTicket/{id:int}")]
         [ProducesResponseType(StatusCodes.Status204NoContent)]
