# EmployeesManagement/EmployeesManagement/Model/BusnessTrip.cs
@@ -7,7 +7,11 @@ namespace EmployeesManagement.Model
 
 		public required Boolean Alone { get; set; }
 
-		public required WorkingTime WorkInfo { get; set; }
+        public required Adress Adress { get; set; }
+
+        public required DateTime From { get; set; }
+
+        public required DateTime To { get; set; }
 
         public ICollection<Person> Persons { get; set; } = new List<Person>();  
     }
