# EmployeesManagement/EmployeesManagement/Model/WorkingTime.cs
@@ -1,16 +1,0 @@
-﻿using System;
-namespace EmployeesManagement.Model
-{
-	public class WorkingTime:BaseEntity
-	{
-		public  string? NameOfProject { get; set; }
-
-		public required DateTime From { get; set; }
-
-		public required DateTime To { get; set; }
-
-		public required Adress Adress { get; set; }
-
-	}
-}
-
